--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,19 +16,22 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 #test2
+
 stages:          # List of stages for jobs, and their order of execution
   - build
-  - deploy
+#  - deploy
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - "mvn package -B"
+  artifacts:
+    paths:
+      - target/*.war
 
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+#deploy-job:      # This job runs in the deploy stage.
+ # stage: deploy
+  #environment: production
+  #script:
+   # - echo "Deploying application..."
+    #- echo "Application successfully deployed."
