--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 #test3 after getting runner working
-
+#Test for build check
 stages:          # List of stages for jobs, and their order of execution
   - build
 #  - deploy
