--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@
 #Test for build check
 stages:          # List of stages for jobs, and their order of execution
   - build
-#  - deploy
+  - deploy
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
@@ -28,3 +28,16 @@ build-job:       # This job runs in the build stage, which runs first.
   artifacts:
     paths:
       - target/*.war
+
+deploy-job:
+  stage: deploy
+  before_script: 
+    - "command -v ssh-agent >/dev/null || (apk add --update openssh )"
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d "\r" | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan $EC2_IPADDRESS >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+  script:
+    - scp -o StrictHostKeyChecking=no /home/gyan/builds/fWfzb8-9z/0/coolkids3/pipelines/target/petclinic.war ubuntu@77.171.64.242:/home/gyan/Downloads/apache-tomcat-9.0.87/webapps
