FOURTH check, with correct permission and whoamI check

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,9 @@
 # https://docs.gitlab.com/ee/development/cicd/templates.html
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
-#test3 after getting runner working
-#Test for build check
+
+#im tired
+
 stages:          # List of stages for jobs, and their order of execution
   - build
   - deploy
