--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -23,6 +23,6 @@ jobs:
       - name: deploy
         run: |
           whoami
-          cp target/*.war /usr/share/tomcat/webapps
+          cp ./target/*.war /usr/share/tomcat/webapps
           echo DONE
         working-directory: ${{ github.workspace }}
