--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -20,9 +20,12 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
+      - name: debug
+        run: |
+          ls ./target
+          whoami
+
       - name: deploy
         run: |
-          whoami
           cp ./target/*.war /usr/share/tomcat/webapps
-          echo DONE
         working-directory: ${{ github.workspace }}
