--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -29,5 +29,7 @@ jobs:
 
       - name: deploy
         run: |
+          pwd
+          echo ${{ github.workspace }}
           cp ${{ github.workspace }}/target/*.war /usr/share/tomcat/webapps
         working-directory: ${{ github.workspace }}
