--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -10,7 +10,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: build
-        run: mvn -B package --file pom.xml
+        run: |
+          mvn -B package --file pom.xml
+          pwd
+          ls
         working-directory: ${{ github.workspace }}
   
   deploy:
