--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -10,11 +10,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: build
-        run: |
-          mvn -B package --file pom.xml
-          pwd
-          ls
+        run: mvn -B package --file pom.xml
         working-directory: ${{ github.workspace }}
+
+      - name: savewar
+        uses: actions/upload-artifact@v4
+        with:
+          name: petclinic
+          path: /target/petclinic.war
   
   deploy:
     runs-on: self-hosted
@@ -23,16 +26,14 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v4
 
-      - name: debug
-        run: |
-          pwd
-          ls
-          whoami
-          echo ${{ github.workspace }}
+      - name: downloadwar
+        uses: actions/download-artifact@v4
+        with:
+          name: petclinic
+          path: /tmp
 
       - name: deploy
         run: |
           pwd
-          echo ${{ github.workspace }}
-          cp ${{ github.workspace }}/target/petclinic.war /usr/share/tomcat/webapps
+          cp /tmp/petclinic.war /usr/share/tomcat/webapps
         working-directory: ${{ github.workspace }}
