--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: petclinic
-          path: /target/petclinic.war
+          path: target/*.war
   
   deploy:
     runs-on: self-hosted
