--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -19,6 +19,21 @@ jobs:
           name: petclinic
           path: target/*.war
   
+  test:
+    runs-on: self-hosted
+    steps:
+    - name: JMeter Test
+      uses: QAInsights/PerfAction@v5.6.2
+      with:
+        test-plan-path: ./FirstJmeter.jmx
+        args: ""
+    - name: Upload Results
+      uses: actions/upload-artifact@v3
+      with:
+        name: jmeter-results
+        path: result.jtl
+        if-no-files-found: error
+  
   deploy:
     runs-on: self-hosted
     needs: build
