--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -25,14 +25,14 @@ jobs:
     - name: JMeter Test
       uses: QAInsights/PerfAction@v5.6.2
       with:
-        test-plan-path: ./FirstJmeter.jmx
+        test-plan-path: FirstJmeter.jmx
         args: ""
         
     - name: Upload Results
       uses: actions/upload-artifact@v3
       with:
         name: jmeter-results
-        path: ./result.jtl
+        path: result.jtl
         if-no-files-found: error
   
   deploy:
