--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -21,15 +21,17 @@ jobs:
   
   test:
     runs-on: self-hosted
-    steps:
+    steps:    
     - name: commands
       run: |
         pwd
         ls
+      working-directory: ${{ github.workspace }}
+        
     - name: JMeter Test
       uses: QAInsights/PerfAction@v5.6.2
       with:
-        test-plan-path: FirstJmeter.jmx
+        test-plan-path: /home/gyan/Documents/cicdgithub/FirstJmeter.jmx
         args: ""
         
     - name: Upload Results
