--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -31,7 +31,7 @@ jobs:
     - name: JMeter Test
       uses: QAInsights/PerfAction@v5.6.2
       with:
-        test-plan-path: /home/gyan/Documents/cicdgithub/FirstJmeter.jmx
+        test-plan-path: ./jmetertest/FirstJmeter.jmx
         args: ""
         
     - name: Upload Results
