--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -2,6 +2,10 @@ name: PipelineTest
 
 on: [push]
 
+defaults:
+  run:
+    working-directory: ${{ github.workspace }}
+
 jobs:
   build:
     runs-on: self-hosted
