--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -2,10 +2,6 @@ name: PipelineTest
 
 on: [push]
 
-defaults:
-  run:
-    working-directory: ${{ github.workspace }}
-
 jobs:
   build:
     runs-on: self-hosted
@@ -31,12 +27,13 @@ jobs:
       run: |
         pwd
         ls
+        cd ./jmetertest
       working-directory: ${{ github.workspace }}
         
     - name: JMeter Test
       uses: QAInsights/PerfAction@v5.6.2
       with:
-        test-plan-path: jmetertest/FirstJmeter.jmx
+        test-plan-path: FirstJmeter.jmx
         args: ""
         
     - name: Upload Results
