--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -27,13 +27,12 @@ jobs:
       run: |
         pwd
         ls
-        cd ./jmetertest
       working-directory: ${{ github.workspace }}
         
     - name: JMeter Test
-      uses: QAInsights/PerfAction@v5.6.2
+      uses: QAInsights/PerfAction@v2
       with:
-        test-plan-path: FirstJmeter.jmx
+        test-plan-path: jmetertest/FirstJmeter.jmx
         args: ""
         
     - name: Upload Results
