--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -23,17 +23,9 @@ jobs:
     runs-on: self-hosted
     needs: build
     steps:    
-    - name: commands
-      run: |
-        pwd
-        ls
-      working-directory: ${{ github.workspace }}
-        
-    - name: JMeter Test
-      uses: QAInsights/PerfAction@v5.6.2
-      with:
-        test-plan-path: jmetertest/FirstJmeter.jmx
-        
+    - name: JMeter Test run
+      run: ./apache-jmeter-5.6.3/bin/jmeter -n -t ./jmetertest/FirstJMeter.jmx -l result.jtl
+     
     - name: Upload Results
       uses: actions/upload-artifact@v4
       with:
