--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: JMeter Test run
       run: |
         pwd
-        ./apache-jmeter-5.6.3/bin/jmeter -n -t ./jmetertest/FirstJMeter.jmx -l result.jtl
+        /apache-jmeter-5.6.3/bin/jmeter -n -t /jmetertest/FirstJMeter.jmx -l result.jtl
      
     - name: Upload Results
       uses: actions/upload-artifact@v4
