--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: JMeter Test run
       run: |
         pwd
-        /home/gyan/Downloads/apache-jmeter-5.6.3/bin/jmeter -n -t /home/gyan/Documents/cicdgithub/jmetertest/FirstJMeter.jmx -l result.jtl
+        /home/gyan/Downloads/apache-jmeter-5.6.3/bin/jmeter -n -t /home/gyan/Documents/cicdgithub/jmetertest/FirstJMeter.jmx -l /home/gyan/Documents/cicdgithub/jmetertest/result.jtl
      
     - name: Upload Results
       uses: actions/upload-artifact@v4
