--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: jmeter-results
-        path: jmetertest/*.jtl
+        path: /home/gyan/Documents/cicdgithub/jmetertest/*.jtl
         if-no-files-found: error
   
   deploy:
