--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -18,6 +18,16 @@ jobs:
         with:
           name: petclinic
           path: target/*.war
+  test_2:
+    runs-on: self-hosted
+    needs: test
+    steps:    
+    - name: Selenium Test run
+      run: |
+        ls
+        cd tests
+        pwd
+        python3 test_websitebasic.py
   
   test:
     runs-on: self-hosted
@@ -35,18 +45,10 @@ jobs:
         path: /home/gyan/Documents/cicdgithub/tests/*.jtl
         if-no-files-found: error
   
-  test_2:
-    runs-on: self-hosted
-    needs: test
-    steps:    
-    - name: Selenium Test run
-      run: |
-        pwd
-        python3 /tests/test_websitebasic.py
-  
+ 
   deploy:
     runs-on: self-hosted
-    needs: test
+    needs: test_2
     steps:
       - name: checkout code
         uses: actions/checkout@v4
