--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Selenium Test Run
       run: |
         cd tests
-        pytest test_websitebasic.py --html=seleniumreport.html
+        python3 test_websitebasic.py
     
     - name: Upload Results
       uses: actions/upload-artifact@v4
