--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -18,9 +18,27 @@ jobs:
         with:
           name: petclinic
           path: target/*.war
-  test_1:
+          
+  deploy:
     runs-on: self-hosted
     needs: build
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
+
+      - name: downloadwar
+        uses: actions/download-artifact@v4
+        with:
+          name: petclinic
+          path: /tmp
+
+      - name: deploy
+        run: cp /tmp/petclinic.war /usr/share/tomcat/webapps
+        working-directory: ${{ github.workspace }}
+  
+  test_1:
+    runs-on: self-hosted
+    needs: deploy
     steps:    
     - name: Selenium Test Run
       run: |
@@ -40,21 +58,3 @@ jobs:
         name: jmeter-results
         path: /home/gyan/Documents/cicdgithub/tests/*.jtl
         if-no-files-found: error
-  
- 
-  deploy:
-    runs-on: self-hosted
-    needs: test_2
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v4
-
-      - name: downloadwar
-        uses: actions/download-artifact@v4
-        with:
-          name: petclinic
-          path: /tmp
-
-      - name: deploy
-        run: cp /tmp/petclinic.war /usr/share/tomcat/webapps
-        working-directory: ${{ github.workspace }}
