--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -36,18 +36,18 @@ jobs:
         run: cp /tmp/petclinic.war /usr/share/tomcat/webapps
         working-directory: ${{ github.workspace }}
   
-  test_1:
+  selenium_test:
     runs-on: self-hosted
     needs: deploy
     steps:    
     - name: Selenium Test Run
       run: |
         cd tests
-        python3 test_websitebasic.py
+        pytest -s test_websitebasic.py
   
-  test_2:
+  jmeter_test:
     runs-on: self-hosted
-    needs: test_1
+    needs: selenium_test
     steps:    
     - name: JMeter Test Run
       run: /home/gyan/Downloads/apache-jmeter-5.6.3/bin/jmeter -n -t /home/gyan/Documents/cicdgithub/tests/FirstJMeter.jmx -l /home/gyan/Documents/cicdgithub/tests/result.jtl
